--- a/app/src/main/res/drawable/connect_resume_button.xml
+++ b/app/src/main/res/drawable/connect_resume_button.xml
@@ -2,9 +2,12 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_pressed="false"
+        android:state_enabled="true"
         android:drawable="@color/colorAccent"/>
+
     <item
         android:state_pressed="true"
+        android:state_enabled="false"
         android:drawable="@color/cardview_dark_background"/>
 
 
