--- a/app/src/main/res/layout/layout_content_display.xml
+++ b/app/src/main/res/layout/layout_content_display.xml
@@ -4,38 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_margin="5dp"
+    android:background="@color/cardview_dark_background"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <RelativeLayout
-        android:layout_width="190dp"
-        android:layout_height="162dp">
+        android:layout_width="wrap_content"
+        android:layout_height="160dp">
 
         <TextView
-            android:id="@+id/state"
+            android:id="@+id/value"
             android:layout_width="107dp"
             android:layout_height="43dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="59dp"
-            android:layout_marginTop="73dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="57dp"
+            android:layout_marginTop="102dp"
+            android:layout_marginEnd="27dp"
             android:text="not found"
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/textView3"
-            android:layout_width="172dp"
-            android:layout_height="41dp"
+            android:id="@+id/title"
+            android:layout_width="347dp"
+            android:layout_height="54dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="21dp"
-            android:layout_marginTop="13dp"
-            android:layout_marginEnd="29dp"
-            android:layout_marginBottom="103dp"
+            android:layout_marginTop="26dp"
+            android:layout_marginEnd="34dp"
+            android:layout_marginBottom="80dp"
             android:text="state"
             android:textAlignment="textStart"
             android:textSize="18sp"
