--- a/app/src/main/res/layout/select_activity_recycler_view.xml
+++ b/app/src/main/res/layout/select_activity_recycler_view.xml
@@ -10,17 +10,20 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycleListView"
         android:layout_width="match_parent"
-        android:layout_height="600dp">
+        android:layout_height="600dp"
+        android:background="@color/cardview_shadow_start_color">
 
     </android.support.v7.widget.RecyclerView>
 
 
     <android.support.design.widget.BottomNavigationView
-        android:layout_width = "match_parent"
-        android:layout_height = "wrap_content"
-        android:layout_alignParentBottom = "true"
-        app:menu="@menu/bottom_navigation"
-        android:background="?android:attr/windowBackground"/>
+        android:id="@+id/navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="0dp"
+        android:background="?android:attr/windowBackground"
+        app:menu="@menu/bottom_navigation" />
 
 
 
