Trying to upload a file from the device to the Octoprint in app

--- a/app/src/main/res/drawable-nodpi/button_bg_round.xml
+++ b/app/src/main/res/drawable-nodpi/button_bg_round.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <selector xmlns:android="http://schemas.android.com/apk/res/android">
-        <item>
-            <shape android:shape="oval">
-                <stroke android:color="#80010700" android:width="5dp"  />
-                <solid android:color="#108A63" />
-                <size android:width="100dp" android:height="100dp"/>
-            </shape>
-        </item>
-    </selector>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="oval">
+            <stroke android:color="#FAF9F6" android:width="5dp" />
+            <solid android:color="#C7DDB0"/>
+            <corners android:radius="15dp"/>
+            <!--<size android:width="100dp" android:height="100dp"/>-->
+        </shape>
+    </item>
+</selector>
