--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#555000</color>
     <color name="colorPrimaryDark">#000044</color>
     <color name="colorAccent">#6600CC</color>
-    <color name="colorWhite">#fcf9f9</color>
+    <color name="colorWhite">#FCF9F9</color>
     <color name="colorBackground">#82B1FF</color>
 
     <!--<color name="colorPrimary">#262938</color>-->
