--- a/app/src/main/res/layout/layout_file_row_item.xml
+++ b/app/src/main/res/layout/layout_file_row_item.xml
@@ -9,6 +9,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
+    android:foreground="?android:attr/selectableItemBackground"
     android:onClick="printButton"
     android:orientation="vertical">
 
