--- a/app/src/main/res/layout-finger/home_activity.xml
+++ b/app/src/main/res/layout-finger/home_activity.xml
@@ -13,7 +13,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="wrap_content"
         android:fillViewport="true">
 
         <LinearLayout
